--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -7,9 +7,9 @@ resources:
     url: /local/card-tools.js
   - type: js
     url: /local/custom_ui/weather-card.js
-  - type: module
-    url: >-
-      https://cdn.jsdelivr.net/gh/bramkragten/custom-ui@master/weather-card/weather-card.min.js
+    #- type: module
+    #    url: >-
+    #  https://cdn.jsdelivr.net/gh/bramkragten/custom-ui@master/weather-card/weather-card.min.js
   - type: module
     url: /local/mini-media-player-bundle.js?v=1.1.3
   - type: module
