--- a/lovelace/10_home_classic.yaml
+++ b/lovelace/10_home_classic.yaml
@@ -64,7 +64,7 @@ cards:
             type: glance
           - columns: 2
             entities:
-              - entity: light.kitchen_light
+              - entity: light.encimera
                 hold_action:
                   action: more-info
                 name: Cuina
