--- a/scenes.yaml
+++ b/scenes.yaml
@@ -4,6 +4,7 @@
       state: true
       brightness: 10
       color_temp: 454
+    switch.arbol_de_navidad: true
     light.sofa: false
     light.mesa: false
 - name: Buenos días
@@ -14,7 +15,7 @@
       color_temp: 250
     light.sofa: false
     light.mesa: false
-    light.kitchen_light:
+    light.encimera:
       state: true
     light.entrada:
       state: true
@@ -27,6 +28,7 @@
     light.sofa:
       state: true
       brightness: 254
+    switch.arbol_de_navidad: true
     light.mesa: false
 - name: Con amigos
   entities:
@@ -40,6 +42,7 @@
     light.mesa: 
       state: true
       brightness: 200
+    switch.arbol_de_navidad: true
 - name: Relax
   entities:
     light.detras_de_la_tele:
@@ -49,6 +52,7 @@
     light.sofa:
       state: true
       brightness: 100
+    switch.arbol_de_navidad: true
     light.mesa: false
 - name: Juegos de mesa
   entities:
@@ -62,3 +66,4 @@
     light.mesa:
       state: true
       brightness: 200 
+    switch.arbol_de_navidad: true
