--- a/automations/heater/climate_menjador_set_19_afternoon.yaml
+++ b/automations/heater/climate_menjador_set_19_afternoon.yaml
@@ -20,7 +20,7 @@ condition:
           entity_id: media_player.tele
           state: 'playing'
         - condition: state
-          entity_id: light.kitchen_light
+          entity_id: light.encimera
           state: 'on'
         - condition: state
           entity_id: light.entrada
