--- a/automations/scheduled/0700_turn_off_heater.yaml
+++ b/automations/scheduled/0700_turn_off_heater.yaml
@@ -6,7 +6,7 @@ trigger:
 condition: []
 action:
 - data:
-    entity_id: switch.calefaccio
+    entity_id: switch.calefaccio_menjador
   service: switch.turn_off
 - data:
     entity_id: switch.calefaccio_dormitori
