--- a/devices/switches.yaml
+++ b/devices/switches.yaml
@@ -2,12 +2,21 @@
   host: !secret ip_switch_calefaccio_menjador
   mac: !secret mac_switch_calefaccio_menjador
   type: sp2
-  friendly_name: 'Calefacció'
+  friendly_name: 'Calefacció menjador'
 - platform: broadlink
   host: !secret ip_switch_calefaccio_menjador
   mac: !secret mac_switch_calefaccio_menjador
   type: sp2
   friendly_name: 'Ventilador'
+- platform: mqtt
+  name: 'Árbol de Navidad'
+  command_topic: 'wifi/switch/arbre/set'
+  state_topic: 'wifi/switch/arbre'
+  state_on: 'on'
+  state_off: 'off'
+  payload_on: 'on'
+  payload_off: 'off'
+  retain: true
 - platform: mqtt
   name: 'Calefacció dormitori'
   command_topic: 'wifi/switch/dormitori_calefaccio/set'
