--- a/lovelace/00_home_modern/group_bulbs.yaml
+++ b/lovelace/00_home_modern/group_bulbs.yaml
@@ -34,6 +34,20 @@
       variables:
         - show_name: true
         - show_state: false
+        - name: Arbre
+        - entity: switch.arbol_de_navidad
+        - state:
+            - color: "#BAC0C6"
+              icon: "mdi:pine-tree"
+              value: "off"
+            - color: "rgb(251, 210, 41)"
+              icon: "mdi:pine-tree"
+              value: "on"
+    - template: nest_button
+      type: "custom:decluttering-card"
+      variables:
+        - show_name: true
+        - show_state: false
         - name: Tele
         - entity: light.detras_de_la_tele
         - state:
@@ -65,7 +79,7 @@
         - show_name: true
         - show_state: false
         - name: Cuina
-        - entity: light.kitchen_light
+        - entity: light.encimera
         - state:
             - color: "#BAC0C6"
               icon: "mdi:lightbulb"
