--- a/timers.yaml
+++ b/timers.yaml
@@ -1,6 +1,6 @@
-llum_entrada:
+llum_entrada_timeout:
   duration: '00:05:00'
-llum_cuina:
+llum_cuina_timeout:
   duration: '00:15:00'
 sensor_finestra_habitacio_timeout:
   duration: '00:01:00'
