--- a/configuration.yaml
+++ b/configuration.yaml
@@ -166,4 +166,4 @@ group: !include groups.yaml
 automation: !include_dir_list automations/
 script: !include_dir_merge_named scripts/
 zone: !include zones.yaml
-# timer: !include timers.yaml
+timer: !include timers.yaml
