Clean UI config

--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,41 +1,38 @@
 resources:
-  - type: js
-    url: /local/layout-card.js
-  - type: js
-    url: /local/vertical-stack-in-card.js?v=0.1.3
-  - type: js
-    url: /local/card-tools.js
-  - type: js
-    url: /local/custom_ui/weather-card.js
-    #- type: module
-    #    url: >-
-    #  https://cdn.jsdelivr.net/gh/bramkragten/custom-ui@master/weather-card/weather-card.min.js
-  - type: module
-    url: /local/mini-media-player-bundle.js?v=1.1.3
-  - type: module
-    url: /local/mini-graph-card-bundle.js?v=0.4.2
-  - type: module
-    url: /local/simple-weather-card.bundle.js?v=0.3.0
-  - type: module
-    url: /local/simple-thermostat.js?v=1
+  - url: /community_plugin/lovelace-layout-card/layout-card.js
+    type: module
+  - url: /community_plugin/vertical-stack-in-card/vertical-stack-in-card.js
+    type: js
+  - url: /community_plugin/lovelace-card-tools/card-tools.js
+    type: module
+  - url: /community_plugin/weather-card/weather-card.js
+    type: module
+  - url: /community_plugin/mini-media-player/mini-media-player-bundle.js
+    type: module
+  - url: /community_plugin/mini-graph-card/mini-graph-card-bundle.js
+    type: module
+  - url: /community_plugin/simple-weather-card/simple-weather-card-bundle.js
+    type: module
+  - url: /community_plugin/simple-thermostat/simple-thermostat.js
+    type: module
   - url: /community_plugin/custom-header/custom-header.js
     type: module
-  - type: module
-    url: /local/button-card.js
-  - type: js
-    url: /local/card-mod.js?v=1
-  - type: module
-    url: /local/decluttering-card.js
-  - type: js
-    url: /local/nest-layout-card.js
-  - type: module
-    url: /local/weather-card-ws-mod.js
-  - type: module
-    url: /local/smhi-forecast-card.js
-  - type: module
-    url: /local/markdown-mod.js
-  - type: module
-    url: /local/atomic_calendar.js
+  - url: /community_plugin/button-card/button-card.js
+    type: module
+  - url: /community_plugin/lovelace-card-mod/card-mod.js
+    type: null
+  - url: /community_plugin/decluttering-card/decluttering-card.js
+    type: module
+  - url: /community_plugin/atomic_calendar/atomic_calendar.js
+    type: module
+  - url: /local/nest-layout-card.js
+    type: js
+  - url: /local/weather-card-ws-mod.js
+    type: module
+  - url: /local/smhi-forecast-card.js
+    type: module
+  - url: /local/markdown-mod.js
+    type: module
 custom_header: 
   compact_mode: true
 cch:
