--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+www/community
 
 # Created by https://www.gitignore.io/api/homeassistant
 # Edit at https://www.gitignore.io/?templates=homeassistant
