--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -20,7 +20,7 @@ resources:
   - url: /community_plugin/button-card/button-card.js
     type: module
   - url: /community_plugin/lovelace-card-mod/card-mod.js
-    type: null
+    type: js
   - url: /community_plugin/decluttering-card/decluttering-card.js
     type: module
   - url: /community_plugin/atomic_calendar/atomic_calendar.js
