Automate kitchen light

--- a/automations/ifttt/kitchen_light_turn_on.yaml
+++ b/automations/ifttt/kitchen_light_turn_on.yaml
@@ -4,9 +4,6 @@ trigger:
 - payload: 'on'
   platform: mqtt
   topic: wifi/switch/cuina/set
-condition: 
-- condition: state
-  entity_id: light.encimera 
-  state: 'off'
+condition: []
 action:
 - service: script.encimera_turn_on
