--- a/automations/presence-detection/light_entrance/entrance_light_turn_on.yaml
+++ b/automations/presence-detection/light_entrance/entrance_light_turn_on.yaml
@@ -9,3 +9,6 @@ action:
 - service: light.turn_on
   data:
     entity_id: light.entrada
+- service: timer.cancel
+  data:
+    entity_id: timer.llum_entrada_timeout
