--- a/automations/ifttt/kitchen_light_turn_off.yaml
+++ b/automations/ifttt/kitchen_light_turn_off.yaml
@@ -4,9 +4,6 @@ trigger:
 - payload: 'off'
   platform: mqtt
   topic: wifi/switch/cuina/set
-condition:
-- condition: state
-  entity_id: light.encimera
-  state: 'on'
+condition: []
 action:
 - service: script.encimera_turn_off
