Automate kitchen light

--- a/automations/presence-detection/light_kitchen/encimera_light_timeout_turn_off.yaml
+++ b/automations/presence-detection/light_kitchen/encimera_light_timeout_turn_off.yaml
@@ -1,4 +1,4 @@
-alias: Entrada - Apagar llum quan timer sigui 0
+alias: Cuina - Apagar llum quan timer sigui 0
 trigger:
 - platform: event
   event_type: timer.finished
