--- a/automations/presence-detection/light_kitchen/encimera_light_turn_off.yaml
+++ b/automations/presence-detection/light_kitchen/encimera_light_turn_off.yaml
@@ -1,4 +1,4 @@
-alias: Entrada - Quan no hi hagi moviment, activar timer
+alias: Cuina - Quan no hi hagi moviment, activar timer
 trigger:
 - entity_id: binary_sensor.motion_kitchen 
   from: 'on'
