--- a/automations/presence-detection/light_kitchen/encimera_light_turn_on.yaml
+++ b/automations/presence-detection/light_kitchen/encimera_light_turn_on.yaml
@@ -1,4 +1,4 @@
-alias: Entrada - Encendre llum amb moviment
+alias: Cuina - Encendre llum amb moviment
 trigger:
 - entity_id: binary_sensor.motion_kitchen 
   from: 'off'
