--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -57,6 +57,16 @@ cch:
       config:
         show_tabs: 10
         kiosk_mode: true
+animated_background:
+  default_url: /community_plugin/lovelace-animated-background/background-animations/sunny.html
+  entity: "weather.dark_sky"
+  state_url:
+      'sunny': /community_plugin/lovelace-animated-background/background-animations/sunny.html
+      'partlycloudy': /community_plugin/lovelace-animated-background/background-animations/cloudy.html
+      'cloudy': /community_plugin/lovelace-animated-background/background-animations/cloudy.html
+      'mostlycloudy': /community_plugin/lovelace-animated-background/background-animations/mostlycloudy.html
+      'clear-night': /community_plugin/lovelace-animated-background/background-animations/night.html
+      'fog': /community_plugin/lovelace-animated-background/background-animations/fog.html
 decluttering_templates:
   nest_button:
     card:
