--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -38,25 +38,8 @@ resources:
   - url: /local/markdown-mod.js
     type: module
 custom_header: 
+  header_text: '{{ time }}'
   compact_mode: true
-cch:
-  disable: false
-  header: true
-  menu: show
-  sidebar_swipe: true
-  notifications: show
-  voice: hide
-  options: clock
-  clock_format: 24
-  clock_date: true
-  date_locale: es-CA
-  swipe: true
-  exceptions:
-    - conditions:
-        user: dashboard
-      config:
-        show_tabs: 10
-        kiosk_mode: true
 animated_background:
   default_url: /community_plugin/lovelace-animated-background/background-animations/sunny.html
   entity: "weather.dark_sky"
