--- a/timers.yaml
+++ b/timers.yaml
@@ -6,3 +6,5 @@ sensor_finestra_habitacio_timeout:
   duration: '00:00:30'
 sensor_finestra_menjador_timeout:
   duration: '00:00:30'
+inactivitat_casa:
+  duration: '00:30:00'
