--- a/lovelace/00_home_modern/sidebar_hour.yaml
+++ b/lovelace/00_home_modern/sidebar_hour.yaml
@@ -6,13 +6,15 @@
       style: |
         ha-card {
           background-color: rgba(0, 0, 0, 0);
-          font-family: 'Open Sans', sans-serif;
+          font-family: Roboto, 'Open Sans', sans-serif;
           font-size: 300%;
           -webkit-box-shadow: none;
           -moz-box-shadow: none;
           box-shadow: none;
           text-align: left;
-          margin-top: 600px;
+          display: block;
+          position: absolute;
+          bottom: 50px;
         }
         h1, h3 {
           font-weight: 300 !important;
@@ -35,7 +37,9 @@
           -webkit-box-shadow: none;
           -moz-box-shadow: none;
           box-shadow: none;
-          margin-top: 625px;
+          display: block;
+          position: absolute;
+          bottom: 85px;
         }
         .weather__info--add {
           display: none;
