--- a/themes/nest.yaml
+++ b/themes/nest.yaml
@@ -2,12 +2,13 @@ nest:
   background-image: 'center / cover no-repeat url("/local/background.jpg") fixed'
 
   # Card-Specific Modifications
-  ha-card-box-shadow: "10px 10px 17px -8px #A9A9A9" # Shadows on cards. Same as `shadow-elevation-2dp_-_box-shadow:
+  # ha-card-box-shadow: "10px 10px 17px -8px #A9A9A9" # Shadows on cards. Same as `shadow-elevation-2dp_-_box-shadow:
+  ha-card-box-shadow: "2px 2px 5px rgba(50,50,50,0.8)"
   ha-card-border-radius: "10px" # Rounded corners on cards. NOTE: may not work with custom cards.
   # ha-card-background: # Defines the background for cards.
 
   # Fonts
-  primary-font-family: "Open Sans,sans-serif"
+  primary-font-family: "Roboto, Open Sans,sans-serif"
   paper-font-common-base_-_font-family: "var(--primary-font-family)"
   paper-font-common-code_-_font-family: "var(--primary-font-family)"
   paper-font-body1_-_font-family: "var(--primary-font-family)"
