--- a/lovelace/00_home_modern/sidebar.yaml
+++ b/lovelace/00_home_modern/sidebar.yaml
@@ -44,7 +44,7 @@
       margin-top: 30px;
       margin-bottom: 120px;
       background-color: rgba(0, 0, 0, 0);
-      font-family: 'Open Sans', sans-serif;
+      font-family: Roboto, 'Open Sans', sans-serif;
       font-size: 150%;
       -webkit-box-shadow: none;
       -moz-box-shadow: none;
