--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .HA_VERSION
 www/community
+.virtualenv
 
 # Created by https://www.gitignore.io/api/homeassistant
 # Edit at https://www.gitignore.io/?templates=homeassistant
