--- a/lovelace/00_home_modern/sidebar_hour.yaml
+++ b/lovelace/00_home_modern/sidebar_hour.yaml
@@ -1,46 +1,57 @@
-- type: horizontal-stack
-  cards:
-    - type: markdown
-      content: |
-        # [[ sensor.time.state ]]
-      style: |
-        ha-card {
-          background-color: rgba(0, 0, 0, 0);
-          font-family: Roboto, Roboto, 'Open Sans', sans-serif;
-          font-size: 300%;
-          -webkit-box-shadow: none;
-          -moz-box-shadow: none;
-          box-shadow: none;
-          text-align: left;
-          display: block;
-          position: absolute;
-          bottom: 50px;
-        }
-        h1, h3 {
-          font-weight: 300 !important;
-          margin: 0px;
-          color: white;
-        }
-        h3 {
-          font-size: 0.7em;
-        }
-    - backdrop:
-        day: "rgba(0, 0, 0, 0)"
-        night: "rgba(0, 0, 0, 0)"
-        text: "#ffffff"
-      entity: weather.dark_sky
-      type: "custom:simple-weather-card"
-      style: |
-        ha-card {
-          background-color: rgba(0, 0, 0, 0);
-          font-family: Roboto, 'Open Sans', sans-serif;
-          -webkit-box-shadow: none;
-          -moz-box-shadow: none;
-          box-shadow: none;
-          display: block;
-          position: absolute;
-          bottom: 85px;
-        }
-        .weather__info--add {
-          display: none;
-        }
+- type: entities
+  style: |
+    ha-card {
+      background: rgba(0,0,0,0.3);
+      display: block;
+      position: absolute;
+      bottom: 10px;
+      box-shadow: none;
+    }
+    .card-content {
+      padding: 0px;
+      margin: 0px;
+    }
+  entities: 
+  - type: "custom:vertical-stack-in-card"
+    cards:
+    - type: horizontal-stack
+      cards:
+        - type: markdown
+          content: |
+            # [[ sensor.time.state ]]
+          style: |
+            ha-card {
+              background-color: rgba(0, 0, 0, 0);
+              font-family: Roboto, 'Open Sans', sans-serif;
+              font-size: 300%;
+              -webkit-box-shadow: none;
+              -moz-box-shadow: none;
+              box-shadow: none;
+              text-align: left;
+            }
+            h1, h3 {
+              font-weight: 300 !important;
+              margin: 0px;
+              color: white;
+            }
+            h3 {
+              font-size: 0.7em;
+            }
+        - backdrop:
+            day: "rgba(0, 0, 0, 0)"
+            night: "rgba(0, 0, 0, 0)"
+            text: "#ffffff"
+          entity: weather.dark_sky
+          type: "custom:simple-weather-card"
+          style: |
+            ha-card {
+              background-color: rgba(0, 0, 0, 0);
+              font-family: Roboto, 'Open Sans', sans-serif;
+              -webkit-box-shadow: none;
+              -moz-box-shadow: none;
+              box-shadow: none;
+              margin-top: 25px;
+            }
+            .weather__info--add {
+              display: none;
+            }
