--- a/automations/sensors/light_entrance/movement_triggered.yaml
+++ b/automations/sensors/light_entrance/movement_triggered.yaml
@@ -4,7 +4,21 @@ trigger:
   from: 'off'
   platform: state
   to: 'on'
-condition: []
+condition:
+  condition: or
+  conditions:
+  - condition: state
+    entity_id: 'input_select.home_mode'
+    state: 'Normal'
+  - condition: state
+    entity_id: 'input_select.home_mode'
+    state: 'Inactiu'
+  - condition: state
+    entity_id: 'input_select.home_mode'
+    state: 'Fora de casa'
+  - condition: state
+    entity_id: 'input_select.home_mode'
+    state: 'Simular activitat'
 action:
 - service: light.turn_on
   data:
