--- a/automations/home_modes/normal/mati.yaml
+++ b/automations/home_modes/normal/mati.yaml
@@ -14,6 +14,6 @@ condition:
     state: 'Inactiu'
 action:
   - service: input_select.select_option
-    service_data:
+    data:
       entity_id: input_select.home_mode
       option: Normal
