--- a/scripts/tv/netflix.yaml
+++ b/scripts/tv/netflix.yaml
@@ -1,5 +1,5 @@
 'tv_turn_on_netflix':
-  alias: Turn On TV and select Netflix
+  alias: Vamos a ver Netflix
   sequence:
   - service: scene.turn_on
     data: 
