--- a/automations/heater/climate_menjador_set_19_afternoon.yaml
+++ b/automations/heater/climate_menjador_set_19_afternoon.yaml
@@ -9,6 +9,9 @@ condition:
     - condition: sun
       after: sunset
       after_offset: "01:00:00"
+    - condition: state
+      entity_id: climate.menjador
+      state: "off"
     - condition: time
       before: "22:59:00"
     - condition: numeric_state
