--- a/lovelace/00_home_modern/group_bulbs.yaml
+++ b/lovelace/00_home_modern/group_bulbs.yaml
@@ -49,7 +49,7 @@
         - show_name: true
         - show_state: false
         - name: Tele
-        - entity: light.detras_de_la_tele
+        - entity: light.mesita
         - state:
             - color: "#BAC0C6"
               icon: "mdi:lightbulb"
